# anima_lora

./: .gitignore  .venv  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.ko.md  README.md  README_ko.md  advice.md  bench.md  cafm.md  dcw-questions.md  dcw-research.md  easycontrol_proposal.md  exp.md  fa2vsfa4.md  fixed_for_compilation.md  future_plan.md  graft_step.py  gui.py  gui_i18n.py  inference.py  interpret_inversion.py  inversion_idea.md  invert_embedding.py  plan.md  plan_spectrum.md  proposal.md  pyproject.toml  pyrightconfig.json  spectrum.md  tasks.py  test.md  test.py  timestep-hydra.md  today.md  train.py  trimvsnot.md
.github/workflows/: publish_action.yml
archive/bench/: channel_dominance_analysis.md
archive/dcw/: README.md  findings.md  measure_bias.py  plan.md
archive/dcw-learnable-calibrator/: cross_lora_check.py  lora_multiplier_linearity_check.py
archive/graft/: graft-guideline.md  graft_step.py  graft_tab.py  methods_graft.toml
archive/img2emb/: README.md  anchors.py  infer.py  pretrain.py  rebuild_anchor_artifacts.py
archive/inversion/: interpret_inversion.py  invert_embedding.py
bench/: _common.py  _phase1_bench_one.py  analyze_inversion_and_proposal.md  analyze_lora_input_channels.py  apex_phase0.py  diagnose_t5_vs_inversion.py  fa4_fwd.py  inversion_stability.py  phase0_profile.py  phase1_bwd_sweep.py  probe_saved_inversions.py  sm120_mma.py  v1v2v5_embedding_analysis.py  v3v4_modulation_probe.py
bench/archive/: analyze_lora_input_channels.py
bench/dcw/: README.md  covariance_ceiling.py  k_supervision_sweep.py  measure_bias.py  plan.md  plot_seed_band.py  proposal.md  stability_predictor_check.py  sweep_buckets.py  transfer_hypothesis_check.py
bench/easycontrol/: step0_equivalence.py  step1p5_lse_equivalence.py  two_stream_smoke.py
bench/fa4/: sm120_mma.py
bench/hydralora/: analyze_router_sigma_correlation.py  hydralora_proposal.md  progress0421.md
bench/img2emb/: extract_features.py  phase0_probes.py  phase1_5_anchored.py  phase1_resampler.py  phase2_flow.py  proposal.md
bench/inversion/: analyze_inversion_and_proposal.md  bench_plan.md  diagnose_t5_vs_inversion.py  inversion_stability.py  probe_saved_inversions.py  slot_subspace_analysis.py
bench/inversionv2/: bench_plan.md
bench/ip_adapter/: analysis.md  pe_feature_analysis.py
bench/postfix/: analyze_sigma_tokens.py  initial_postfix_problems.md
bench/rope_fusion/: microbench.py
bench/spectrum/: README.md  analyze_drift.py  bench.py
configs/: base.toml  dataset_config.toml  dataset_config_half.toml  example_lora.toml  post_dataset_config.toml  presets.toml  sam_mask.yaml  training_config.toml  training_config_dora.toml  training_config_doratimestep.toml  training_config_fa4_16gb.toml  training_config_fa4_8gb.toml  training_config_fast_16gb.toml  training_config_hydralora.toml  training_config_low_vram.toml  training_config_plain.toml  training_config_postfix.toml  training_config_postfix_exp.toml  training_config_postfix_func.toml  training_config_prefix.toml  training_config_tlora.toml  training_config_win16gb.toml  training_config_win8gb.toml
configs/datasets/: easycontrol.toml  ip_adapter.toml
configs/gui-methods/: apex.toml  apex_coldstart.toml  easycontrol.toml  graft.toml  hydralora.toml  hydralora_experimental.toml  hydralora_sigma.toml  ip_adapter.toml  lora-8gb.toml  lora-fast.toml  lora.toml  lora_longer.toml  lora_repa.toml  ortholora.toml  postfix.toml  postfix_exp.toml  postfix_func.toml  postfix_sigma.toml  prefix.toml  reft.toml  tlora.toml  tlora_ortho.toml  tlora_ortho_reft.toml
configs/methods/: apex.toml  dora.toml  doratimestep.toml  easycontrol.toml  graft.toml  hydralora.toml  (+7 more)
custom_nodes/comfyui-anima-prefix-postfix/: __init__.py  pyproject.toml
custom_nodes/comfyui-hydralora/: CLAUDE.md  LICENSE  README.md  __init__.py  adapter.py  nodes.py  postfix.py  pyproject.toml
custom_nodes/comfyui-mod-guidance/: __init__.py  pyproject.toml
custom_nodes/comfyui-spectrum/: LICENSE  README.md  __init__.py  forecaster.py  mod_guidance.py  nodes.py  pyproject.toml  spectrum.py
docs/: README.md  apex.md  cuda132.md  difference_between_comfy.md  for_compile.md  full-model-compile.md  graft-guideline.md  hydra-lora.md  img2emb_plan.md  inference.md  inversion_exp.md  invert.md  ip-adapter_plan.md  mod-guidance.md  multi_model_support.md  prefix-tuning.md  proposal.md  roadmap.md  separation_plan.md  spectrum.md  training.md  가이드북.md
graft/: base.toml  dataset_config.toml  generation_prompts.txt  graft_config.toml  training_config.toml
gui/: __init__.py  adapter_tab.py  app.py  config_tab.py  explanations.py  graft_tab.py  i18n.py  image_tab.py  merge_tab.py  process.py  system_dialog.py  variants.py
networks/: CLAUDE.md  __init__.py  attention.py  attention_dispatch.py  condition_shift.py  dcw.py  easycontrol_anima.py  fp8_optimization_utils.py  ip_adapter_anima.py  lora_anima.py  lora_deprecated.py  lora_modules.py  lora_save.py  lora_utils.py  postfix_anima.py  spectrum.py
paper/: anima_hydra_jittered.snapshot.toml  anima_hydra_naive.snapshot.toml  make_router_figure.py  ortho_hydra.tex  ortho_hydra_ko.md
preprocess/: cache_latents.py  cache_pe_encoder.py  cache_text_embeddings.py  generate_masks.py  generate_masks_mit.py  merge_masks.py  resize_images.py
scripts/: analyze_profile_gaps.py  bench_apex_coldstart.py  bench_methods.py  cache_latents.py  cache_text_embeddings.py  comfy_batch.py  compute_pe_centroid.py  convert_lora_to_comfy.py  dcw_measure_bias.py  dcw_train_fusion_head.py  distill_modulation.py  export_logs_json.py  generate_masks.py  generate_masks_mit.py  graft_step.py  interpret_inversion.py  invert_embedding.py  invert_reference.py  merge_masks.py  merge_to_dit.py  post_images.py  profile_ncu.sh  resize_images.py  train_lora.sh  train_lora_llm.sh  train_postfix.sh  update.py
tests/: conftest.py  test_config.py  test_dcw_calibration.py  test_hydra_sigma_band.py  test_inference_hydra_sigma.py  test_lora_custom_autograd.py  test_loss_registry.py  test_network_cfg.py  test_network_registry.py  test_smoke.py
(+171 files in other folders)
