[project]
name = "anima-lora"
version = "0.1.0"
description = "Standalone Anima LoRA training pipeline"
requires-python = "==3.13.*"
dependencies = [
    # Core ML
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "accelerate>=1.13.0",
    "transformers>=5.3.0",
    "diffusers>=0.37.0",
    "einops>=0.7.0",
    # Optimizers
    "bitsandbytes",
    "lion-pytorch>=0.2.3",
    "schedulefree>=1.4",
    "pytorch-optimizer>=3.9.0",
    "prodigyopt>=1.1.2",
    # Data & Config
    "toml>=0.10.2",
    "voluptuous>=0.15.2",
    "safetensors>=0.7.0",
    "imagesize>=1.4.1",
    # Text processing
    "sentencepiece>=0.2.1",
    "huggingface-hub[cli]>=1.7.0",
    # Monitoring & Utilities
    "tensorboard",
    "rich>=14.0.0",
    "tqdm",
    "numpy>=2.0.0",
    "Pillow",
    "psutil",
    "opencv-python>=4.11.0.86",
    # Masking
    "pyyaml",
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",
    "segmentation-models-pytorch>=0.3.4",
    "albumentations>=1.4.0",
    "packaging",
    "pycocotools>=2.0.11",
    # Linux-only CUDA extensions
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3+cu130torch2.11-cp313-cp313-linux_x86_64.whl ; sys_platform == 'linux'",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.6/flash_attn-2.8.3+cu130torch2.11-cp313-cp313-win_amd64.whl ; sys_platform == 'win32'",
    # flash-attn-4 (flash-attention-sm120) is not supported yet — kernel is unstable on our targets.
    # "flash-attn-4 @ git+https://github.com/sorryhyun/flash-attention-sm120-fix.git@dz/sm120_tma_optimized#subdirectory=flash_attn/cute ; sys_platform == 'linux'",
    # "nvidia-cutlass-dsl>=4.4.2 ; sys_platform == 'linux'",
    "triton-windows>=3.6.0 ; sys_platform == 'win32'",
    "pyside6>=6.11.0",
    "ruff>=0.15.9",
]

[project.optional-dependencies]
gui = ["PySide6>=6.7"]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.6",
]

[tool.uv]
index-strategy = "unsafe-best-match"
extra-index-url = ["https://download.pytorch.org/whl/cu130"]
override-dependencies = ["numpy>=2.0.0"]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
