[project]
name = "comfyui-hydralora"
description = "Anima adapter loader for ComfyUI: auto-detects LoRA, HydraLoRA multi-head (experts baked down with uniform weighting), and LoReFT residual-stream edits from a single safetensors file, with separate strength controls for weight-patch and residual-intervention components."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sorryhyun/anima_lora/tree/main/custom_nodes/comfyui-hydralora"

[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "Anima Adapter Loader"
Icon = ""
