[project]
name = "comfyui-hydralora"
description = "Anima adapter loader for ComfyUI: auto-detects LoRA, HydraLoRA multi-head (experts baked down with uniform weighting), LoReFT residual-stream edits, and prefix/postfix/cond context splicing. One node, two independently-toggled sections, separate strength controls."
version = "2.2.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sorryhyun/anima_lora/tree/main/custom_nodes/comfyui-hydralora"

[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "Anima Adapter Loader"
Icon = ""
