[project]
name = "comfyui-spectrum-ksampler"
description = "Spectrum: training-free diffusion sampling acceleration via Chebyshev polynomial feature forecasting. Drop-in KSampler replacement that skips transformer blocks on predicted steps for ~2-3x speedup."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/sorryhyun/anima_lora/tree/main/custom_nodes/comfyui-spectrum"


[tool.comfy]
PublisherId = "sorryhyun"
DisplayName = "Spectrum"
Icon = ""
